# CS4437DSA

./: .gitignore  CMakeLists.txt  README.md  index_requirements.txt  pull_books.py  rebuild  rebuild.sh
PythonTests/: words.csv
PythonTests/by_first_letter/: generate_csvs.py  test_operations.py
PythonTests/no_directory/: generate_csvs.py  tempCodeRunnerFile.py  test_operations.py
index/: animal.csv  dog.csv  test_dummy_data.csv
python/: format_books.py  pull_books.py  total_words.py
python/PythonTests/: generate_words.py
src/: AVLTreeMap.h  AVLTreeMap.tpp  BookInfo.h  DynamicArray.cpp  DynamicArray.h  DynamicArray.tpp  FileInfo.h  HandleSearch.cpp  HandleSearch.h  HashMap.h  HashMap.tpp  IndexBooks.cpp  IndexBooks.h  LinkedList.h  LinkedList.tpp  MinHeap.cpp  MinHeap.h  Parse.cpp  Parse.h  ProcessInput.cpp  ProcessInput.h  RelevanceFunction.cpp  RelevanceFunction.h  StopWords.cpp  StopWords.h  main.cpp  trie.cpp  trie.h
tests/: example_test.cpp  test_bonus_marks.cpp  test_dynamic_array.cpp  test_example.cpp  test_process_input.cpp  test_relevance_score.cpp  test_trie.cpp
